fdo#75053: Adjust reference update on shift for formula groups.

This is similar to my earlier fix for reference update on moving of
cells.

Change-Id: I592599507bfcab12f611eeae7b56c99da6c31919